--- a/css/main.css
+++ b/css/main.css
@@ -76,16 +76,32 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
   width: 100%;
   height: auto;
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .logo {
@@ -306,6 +322,7 @@ img {
   opacity: 1;
   -webkit-transition: opacity 250ms var(--timing-function);
   transition: opacity 250ms var(--timing-function);
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -321,6 +338,7 @@ img {
 
 .modal {
   position: absolute;
+  width: 100%;
   /* padding: 40px; */
   top: 50%;
   left: 50%;
@@ -609,7 +627,20 @@ img {
 
 .features {
   width: auto;
-  padding-bottom: 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .features {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .feature__list {
@@ -625,14 +656,23 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 1200px;
   gap: 30px;
-  margin: 0;
-  padding: 0;
+  margin-right: calc(-1 + var(card-set-gap));
 }
 .feature__list > .item {
-  -ms-flex-preferred-size: calc((100% - 90px) / 4);
-      flex-basis: calc((100% - 90px) / 4);
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .feature__list > .item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__list > .item {
+    -ms-flex-preferred-size: calc((100% - 150px) / 4);
+        flex-basis: calc((100% - 150px) / 4);
+  }
 }
 
 .icon__thumb {
@@ -648,7 +688,7 @@ img {
           align-items: center;
   margin-bottom: 30px;
   border-radius: 4px;
-  width: 270px;
+  width: auto;
   height: 120px;
 }
 
@@ -658,12 +698,18 @@ img {
 }
 
 .feature__title {
+  margin-top: 0;
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.17;
   text-transform: uppercase;
+}
+@media screen and (max-width: 767px) {
+  .feature__title {
+    text-align: center;
+  }
 }
 
 .feature__text {
@@ -678,6 +724,27 @@ img {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (min-width: 480px) {
+  .work__section {
+    display: none;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .work__section {
+    display: none;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work__section {
+    display: block;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
 .work__list {
   display: -webkit-box;
@@ -688,7 +755,6 @@ img {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 1200px;
   margin: 0;
   padding: 0;
   gap: 30px;
@@ -747,9 +813,35 @@ img {
 
 .team__section {
   width: auto;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--second-accent-background-color);
+}
+@media screen and (min-width: 768px) {
+  .team__section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.section__title {
+  font-size: 28px;
+  line-height: 1.18;
+  margin-bottom: 30px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .section__title {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .team__list {
@@ -761,9 +853,6 @@ img {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 1200px;
-  margin: 0;
-  padding: 0;
   gap: 30px;
 }
 .team__list img {
@@ -771,15 +860,24 @@ img {
 }
 
 .team__item {
+  width: 100%;
   background-color: var(--white-text-color);
-  -ms-flex-preferred-size: calc((100% - 90px) / 4);
-      flex-basis: calc((100% - 90px) / 4);
-  padding-top: 0;
-  padding-bottom: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border: transparent;
   border-radius: 0px 0px 4px 4px;
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    -ms-flex-preferred-size: calc((100% - 150px) / 4);
+        flex-basis: calc((100% - 150px) / 4);
+  }
 }
 
 .team__worker {
@@ -811,6 +909,7 @@ img {
 
 .icon__item {
   margin-top: 16px;
+  margin-bottom: 30px;
 }
 
 .icon__link {
@@ -843,12 +942,28 @@ img {
 
 .clients {
   width: auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .clients {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -856,6 +971,23 @@ img {
       -ms-flex-align: center;
           align-items: center;
   gap: 30px;
+}
+
+.clients__list--item {
+  width: 100%;
+  width: calc((100% - 30px) / 2);
+}
+@media screen and (min-width: 768px) {
+  .clients__list--item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__list--item {
+    -ms-flex-preferred-size: calc((100% - 150px) / 6);
+        flex-basis: calc((100% - 150px) / 6);
+  }
 }
 
 .clients__logo--link {
@@ -868,7 +1000,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
   height: 92px;
   color: #AFB1B8;
   border: 1px solid #AFB1B8;
