--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,6 +1,17 @@
 .features {
 	width: auto;
-	padding-bottom: 0;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	
+	@media screen and (min-width: 768px) {
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
+	
+	@media screen and (min-width: 1200px) {
+		padding-top: 94px;
+		padding-bottom: 94px;
+	}
 }
 
 .feature__list {
@@ -9,14 +20,23 @@
 	flex-wrap: wrap;
 	align-items: flex-start;
 	justify-content: center;
-	width: 1200px;
 	gap: 30px;
-	margin: 0;
-	padding: 0;
-	// margin-right: calc(-1 + var(card-set-gap));
+	// width: 1200px;
+
+	// margin: 0;
+	// padding: 0;
+	margin-right: calc(-1 + var(card-set-gap));
 
 	>.item {
-		flex-basis: calc((100% - 90px) / 4);
+		width: 100%;
+
+		@media screen and (min-width: 768px) {
+			flex-basis: calc((100% - 30px) / 2);
+		}
+
+		@media screen and (min-width: 1200px) {
+			flex-basis: calc((100% - 150px) / 4);
+		}
 		// width: 270px;
 		// margin-right: var(--card-set-gap);
 	}
@@ -29,7 +49,7 @@
 	align-items: center;
 	margin-bottom: 30px;
 	border-radius: 4px;
-	width: 270px;
+	width: auto;
 	height: 120px;
 }
 
@@ -39,12 +59,17 @@
 }
 
 .feature__title {
+	margin-top: 0;
 	margin-bottom: 10px;
 	color: var(--title-text-color);
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.17;
 	text-transform: uppercase;
+
+	@media screen and (max-width: 767px) {
+		text-align: center;
+	}
 }
 
 .feature__text {
