--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,6 +8,8 @@
 	z-index: 2;
 	opacity: 1;
 	transition: opacity 250ms var(--timing-function);
+
+	overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -22,6 +24,7 @@
 
 .modal {
 	position: absolute;
+	width: 100%;
 	/* padding: 40px; */
 	top: 50%;
 	left: 50%;
