--- a/sass/components/_work-section.scss
+++ b/sass/components/_work-section.scss
@@ -3,13 +3,31 @@
 	background-color: var(--white-background-color);
 	padding-top: 94px;
 	padding-bottom: 94px;
+
+	@media screen and (min-width: 480px) {
+		display: none;
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
+				
+	@media screen and (min-width: 768px) {
+		display: none;
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
+				
+	@media screen and (min-width: 1200px) {
+		display: block;
+		padding-top: 94px;
+		padding-bottom: 94px;
+	}
 }
 
 .work__list {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	width: 1200px;
+	// width: 1200px;
 	margin: 0;
 	padding: 0;
 	gap: 30px;
